icondir = $(goffice_icondir)
dist_icon_DATA = \
	chart_cone_1_1.png	chart_cone_1_2.png	chart_cone_1_3.png	\
	chart_cone_2_1.png	chart_cone_2_2.png	chart_cone_2_3.png	\
	chart_cone_3_1.png  \
	chart_cylinder_1_1.png	chart_cylinder_1_2.png	chart_cylinder_1_3.png	\
	chart_cylinder_2_1.png	chart_cylinder_2_2.png	chart_cylinder_2_3.png	\
	chart_cylinder_3_1.png  \
	chart_pyramid_1_1.png	chart_pyramid_1_2.png	chart_pyramid_1_3.png	\
	chart_pyramid_2_1.png	chart_pyramid_2_2.png	chart_pyramid_2_3.png	\
	chart_pyramid_3_1.png \
	chart_radar_1_1.png chart_radar_1_2.png chart_radar_1_3.png \
	chart_polar_1_1.png \
	chart_color_polar_1_1.png \
	chart_stock_1_1.png	chart_stock_1_2.png \
	chart_stock_2_1.png	chart_stock_2_2.png \
	chart_pie_1_1.png	chart_pie_1_2.png	chart_pie_1_3.png	\
	chart_pie_2_1.png	chart_pie_2_2.png	chart_pie_2_3.png	\
	chart_pie_3_1.png	chart_pie_3_2.png	\
	chart_ring_1_1.png 	chart_ring_1_2.png \
	chart_boxplot_1_1.png	chart_boxplot_1_2.png \
	chart_boxplot_2_1.png	chart_boxplot_2_2.png \
	chart_histogram_1_1.png chart_histogram_2_1.png \
	chart_histogram_1_3.png chart_histogram_1_4.png \
	chart_prob_1_1.png \
	\
	area.xpm 	\
	bar.xpm		\
	bubble.xpm	\
	color.xpm	\
	column.xpm	\
	contour.xpm	\
	dist.xpm	\
	doughnut.xpm	\
	dropbar.xpm	\
	linegraph.xpm	\
	minmax.xpm	\
	pie.xpm		\
	radar.xpm	\
	polar.png	\
	scatter.xpm	\
	stock.xpm	\
	surface.xpm	\
	\
	bar-none.png 	\
	bar-vplus.png 	\
	bar-vminus.png 	\
	bar-vboth.png	\
	bar-hplus.png 	\
	bar-hminus.png 	\
	bar-hboth.png
