icondir = $(goffice_icondir)
dist_icon_DATA = \
	chart_radar_1_1.png chart_radar_1_2.png chart_radar_1_3.png \
	chart_polar_1_1.png \
	chart_color_polar_1_1.png \
	chart_pie_1_1.png	chart_pie_1_2.png	chart_pie_1_3.png	\
	chart_pie_2_1.png	chart_pie_2_2.png	chart_pie_2_3.png	\
	chart_pie_3_1.png	chart_pie_3_2.png	\
	chart_ring_1_1.png 	chart_ring_1_2.png \
	\
	area.xpm 	\
	bar.xpm		\
	bubble.xpm	\
	color.xpm	\
	column.xpm	\
	contour.xpm	\
	dist.xpm	\
	doughnut.xpm	\
	dropbar.xpm	\
	linegraph.xpm	\
	minmax.xpm	\
	pie.xpm		\
	radar.xpm	\
	polar.png	\
	scatter.xpm	\
	stock.xpm	\
	surface.xpm
